Fix #5306 - Fix tooltip wrapping

--- a/frontend/src/app/styles/site.less
+++ b/frontend/src/app/styles/site.less
@@ -495,6 +495,10 @@ dirty-mark {
     white-space: pre;
 }
 
+.preserve-whitespaces-wrap {
+    white-space: pre-wrap;
+}
+
 .blur {
     filter: blur(4px);
 }
